// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoteCreateContainer Integration Test render should render NoteCreateContainer component 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Connect(NoteCreateContainer)>
      <NoteCreateContainer
        getNotes={[Function]}
        postNote={[Function]}
      >
        <div
          className="col-xl-4 offset-xl-4 col-lg-6 offset-lg-3 col-sm-8 offset-sm-2 note-creator"
        >
          <h2>
            Create New Note
          </h2>
          <Component
            onSubmit={[Function]}
          >
            <NoteFormContainer
              handleSubmit={
                [MockFunction] {
                  "calls": Array [
                    Array [
                      [Function],
                    ],
                  ],
                  "results": Array [
                    Object {
                      "isThrow": false,
                      "value": [Function],
                    },
                  ],
                }
              }
              onSubmit={[Function]}
            >
              <form
                className="note-editor-form ui form error form"
                onSubmit={[Function]}
              >
                <Field
                  component={[Function]}
                  label="Enter Note Title..."
                  name="title"
                >
                  <div />
                </Field>
                <Field
                  component={[Function]}
                  label="Enter Note Body..."
                  name="body"
                >
                  <div />
                </Field>
                <button
                  className="ui right floated button"
                >
                  Submit
                </button>
                <Link
                  replace={false}
                  to="/"
                >
                  <a
                    href="/"
                    onClick={[Function]}
                  >
                    <button
                      className="ui button"
                    >
                      Cancel
                    </button>
                  </a>
                </Link>
              </form>
            </NoteFormContainer>
          </Component>
        </div>
      </NoteCreateContainer>
    </Connect(NoteCreateContainer)>
  </Router>
</Provider>
`;

exports[`NoteCreateContainer Integration Test should render NoteCreateContainer component 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Connect(NoteCreateContainer)>
      <NoteCreateContainer
        getNotes={[Function]}
        postNote={[Function]}
      >
        <div
          className="col-xl-4 offset-xl-4 col-lg-6 offset-lg-3 col-sm-8 offset-sm-2 note-creator"
        >
          <h2>
            Create New Note
          </h2>
          <Component
            onSubmit={[Function]}
          >
            <NoteFormContainer
              handleSubmit={
                [MockFunction] {
                  "calls": Array [
                    Array [
                      [Function],
                    ],
                  ],
                  "results": Array [
                    Object {
                      "isThrow": false,
                      "value": undefined,
                    },
                  ],
                }
              }
              onSubmit={[Function]}
            >
              <form
                className="note-editor-form ui form error form"
              >
                <Field
                  component={[Function]}
                  label="Enter Note Title..."
                  name="title"
                >
                  <div />
                </Field>
                <Field
                  component={[Function]}
                  label="Enter Note Body..."
                  name="body"
                >
                  <div />
                </Field>
                <button
                  className="ui right floated button"
                >
                  Submit
                </button>
                <Link
                  replace={false}
                  to="/"
                >
                  <a
                    href="/"
                    onClick={[Function]}
                  >
                    <button
                      className="ui button"
                    >
                      Cancel
                    </button>
                  </a>
                </Link>
              </form>
            </NoteFormContainer>
          </Component>
        </div>
      </NoteCreateContainer>
    </Connect(NoteCreateContainer)>
  </Router>
</Provider>
`;
